// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LinkEmail should render as a button 1`] = `
<div>
  <a
    class="css-28rk0m"
    href="mailto:example@example.com?subject=example subject&body=example body"
  >
    example
  </a>
</div>
`;

exports[`LinkEmail should render as default 1`] = `
<div>
  <a
    class="css-u6qrp8"
    href="mailto:example@example.com?subject=example subject&body=example body"
  >
    example
  </a>
</div>
`;
